fix overflow contentbox

--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,8 @@
 .content-box {
     flex: 7;
     padding: 30px;
+    max-height: 750px;
+    overflow-y: auto;
     /*  */
     position: relative;
     display: flex;
